--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
+<head >
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Restaurant.Web</title>
@@ -8,15 +8,17 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Restaurant.Web</a>
+    <header >
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-transparent border-bottom box-shadow mb-2">
+            <div class="container" >
+                
+               @* <a class="navbar-brand" asp-area="" asp-page="/Index">Restaurant.Web</a>*@
+                <img src="~/Images/pic2.png" style="width:100px"/>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse" >
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
@@ -24,7 +26,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item dropdown" style="margin-left:650px; background-color:cornflowerblue">
+                        @*<li>
+                            <input type="text" placeholder="Search.." name="search">
+                            <button type="submit"><i class="fa fa-search"></i></button>
+
+                        </li>*@
+                        <li class="nav-item dropdown" style="margin-left:650px; background-color:beige">
                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Welcome2Restaurant</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" 
@@ -43,6 +50,10 @@
                                 asp-area="Demos" asp-controller="PaymentTypes" asp-action="Index">PaymentTypes</a>
                             </div>
                         </li>
+                         @*<li>
+                            <a class="nav-link text-dark" 
+                                asp-area="Menus" asp-controller="Home" asp-action="Index">The Menu</a>
+                         </li>*@
                     </ul>
                 </div>
             </div>
@@ -56,7 +67,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Restaurant.Web - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - ADITYA DUBEY - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            <a href="/swagger" style="margin-left:100px">API Documentation</a>
         </div>
     </footer>
 
