--- a/Areas/Demos/Views/Customers/Details.cshtml
+++ b/Areas/Demos/Views/Customers/Details.cshtml
@@ -43,6 +43,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.CustomerId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @*<a asp-action="Edit" asp-route-id="@Model.CustomerId">Edit</a> |*@
+
+    <a class="btn btn-success" asp-action="Index">Back to List</a>
 </div>
