--- a/Areas/Demos/Views/Customers/Index.cshtml
+++ b/Areas/Demos/Views/Customers/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-dark" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -49,9 +49,11 @@
                 @Html.DisplayFor(modelItem => item.UpdatedDate)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CustomerId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CustomerId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CustomerId">Delete</a>
+                @*<a asp-action="Edit" asp-route-id="@item.CustomerId">Edit</a> |*@
+                <a class="btn btn-danger" asp-action="Details" asp-route-id="@item.CustomerId">Details</a> |
+                @*<a asp-action="Delete" asp-route-id="@item.CustomerId">Delete</a>*@
+                <a class="btn btn-success"
+                                   asp-area="Demos" asp-controller="Menus" asp-action="Index">Return2Menu</a>
             </td>
         </tr>
 }
