--- a/Areas/Demos/Views/ItemCategories/Details.cshtml
+++ b/Areas/Demos/Views/ItemCategories/Details.cshtml
@@ -61,6 +61,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ItemCategoryId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+   @* <a asp-action="Edit" asp-route-id="@Model.ItemCategoryId">Edit</a> |*@
+    <a class="btn btn-success" asp-action="Index">Back to List</a>
 </div>
