--- a/Areas/Demos/Views/Items/Details.cshtml
+++ b/Areas/Demos/Views/Items/Details.cshtml
@@ -73,6 +73,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ItemId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @*<a asp-action="Edit" asp-route-id="@Model.ItemId">Edit</a> |*@
+    <a class="btn btn-danger" asp-action="Index">Back to List</a>
 </div>
