--- a/Areas/Demos/Views/Items/Index.cshtml
+++ b/Areas/Demos/Views/Items/Index.cshtml
@@ -7,83 +7,58 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @*<a asp-action="Create">Create New</a>*@
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ItemName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ItemType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ItemDescription)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsAvailable)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedBy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UpdatedBy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UpdatedDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ItemCategory)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
 @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ItemName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ItemType)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ItemDescription)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsAvailable)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedBy)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedBy)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ItemCategory.ItemCategoryName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ItemId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ItemId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ItemId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="card" style="background-color:beige; margin-bottom:20px">
+    <div class="card-header text-center text-danger text-capitalize"><h3><b>@Html.DisplayNameFor(model => model.ItemName) -   @Html.DisplayFor(modelItem => item.ItemName)</b></h3><br/></div>
+    <div class="card-body">
+
+                
+            
+                @Html.DisplayNameFor(model => model.ItemType) -  <b> @Html.DisplayFor(modelItem => item.ItemType)</b><br/>
+            
+                @Html.DisplayNameFor(model => model.ItemDescription) -  @Html.DisplayFor(modelItem => item.ItemDescription)<br/>
+            
+                @Html.DisplayNameFor(model => model.IsAvailable) -  @Html.DisplayFor(modelItem => item.IsAvailable)<br/>
+            
+                @Html.DisplayNameFor(model => model.Price) - <b> @Html.DisplayFor(modelItem => item.Price)</b><br/>
+           
+                @Html.DisplayNameFor(model => model.CreatedBy) -  @Html.DisplayFor(modelItem => item.CreatedBy)<br/>
+            
+                @Html.DisplayNameFor(model => model.CreatedDate) -  @Html.DisplayFor(modelItem => item.CreatedDate)<br/>
+           
+                @Html.DisplayNameFor(model => model.UpdatedBy) -  @Html.DisplayFor(modelItem => item.UpdatedBy)<br/>
+          
+                @Html.DisplayNameFor(model => model.UpdatedDate) -  @Html.DisplayFor(modelItem => item.UpdatedDate)<br/>
+           
+                @Html.DisplayNameFor(model => model.ItemCategory) - @Html.DisplayFor(modelItem => item.ItemCategory.ItemCategoryName)<br/>
+                </div>
+
+          <div class="card-footer text-center" >
+                @*<a asp-action="Edit" asp-route-id="@item.ItemId">Edit</a> |*@
+                <a class="btn btn-warning" asp-action="Details" asp-route-id="@item.ItemId">Details</a> |
+                @*<a asp-action="Delete" asp-route-id="@item.ItemId">Delete</a>*@
+                <a class="btn btn-success"
+                                asp-area="Demos" asp-controller="Orders" asp-action="Index">Order</a>     
+
+              
+
+          </div>
+ </div>
+}            
+
+               
+
+               
+
+               
+               
+
+               
+
+               
+
+                
+   
+      
