--- a/Areas/Demos/Views/Orders/Index.cshtml
+++ b/Areas/Demos/Views/Orders/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>&bull;&bull;&bull;&bull;&bull;&bull; Orders&bull;&bull;&bull;&bull;</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -61,9 +61,11 @@
                 @Html.DisplayFor(modelItem => item.Item.ItemName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a>
+                @*<a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |*@
+                <a class="btn btn-info" asp-action="Details" asp-route-id="@item.OrderId">Details</a>||
+                @*<a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a>*@
+                 <a class="btn btn-success"
+                                asp-area="Demos" asp-controller="OrderDetails" asp-action="Index">OrderDetails</a>
             </td>
         </tr>
 }
