--- a/Areas/Demos/Views/PaymentTypes/Index.cshtml
+++ b/Areas/Demos/Views/PaymentTypes/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-danger" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.Customer)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OrderId)
+                @Html.DisplayNameFor(model => model.Order)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Item)
@@ -49,7 +49,7 @@
                 @Html.DisplayFor(modelItem => item.Customer.CustomerName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.OrderId)
+                @Html.DisplayFor(modelItem => item.Order.OrderDate)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Item.ItemName)
@@ -61,9 +61,40 @@
                 @Html.DisplayFor(modelItem => item.AmountPaid)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.PaymentTypeId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.PaymentTypeId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PaymentTypeId">Delete</a>
+                @*<a asp-action="Edit" asp-route-id="@item.PaymentTypeId">Edit</a> |*@
+                <a class="btn btn-secondary" asp-action="Details" asp-route-id="@item.PaymentTypeId">Details</a> |
+                @*<a asp-action="Delete" asp-route-id="@item.PaymentTypeId">Delete</a>*@
+                 <!-- Button to Open the Modal -->
+                    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">
+                      Confirm Order
+                    </button>
+
+                    <!-- The Modal -->
+                    <div class="modal" id="myModal">
+                      <div class="modal-dialog">
+                        <div class="modal-content">
+
+                          <!-- Modal Header -->
+                          <div class="modal-header" style="background-color:orangered">
+                            <h4 class="modal-title">Order Confirmation</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                          </div>
+
+                          <!-- Modal body -->
+                          <div class="modal-body" style="background-color:snow">
+                            <h3>Cheers....</h3><br/>
+                            Order Successfully Placed....<br/>
+                            Please wait patiently till order is getting ready....
+                          </div>
+
+                          <!-- Modal footer -->
+                          <div class="modal-footer" style="background-color:forestgreen">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                          </div>
+
+                        </div>
+                      </div>
+                      </div>
             </td>
         </tr>
 }
