--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -3,8 +3,164 @@
 @{
     ViewData["Title"] = "Home page";
 }
+<style>
+    body
+    {
+        background-color:bisque
+    }
+</style>
+
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <marquee class="marq"
+                 Scrollamount=15
+                 bgcolor="Pink"
+                 direction="left"
+                 loop=""><h4 class="display-5">&hearts;&diams;&hearts;&diams;&hearts;&diams;&hearts;&diams;&hearts;&diams;&hearts;&diams;&hearts;&hearts;&diams;&hearts;&diams;&hearts;&diams;&hearts;&diams;&diams;<b>Welcome To The Bhukkad Restaurant..</b>&hearts;&hearts;&diams;&hearts;&diams;&hearts;&diams;&hearts;&diams;&diams;&hearts;&diams;&hearts;&diams;&hearts;&diams;&hearts;&diams;&hearts;&diams;&hearts;&diams;&hearts;&diams;</h4></marquee>
+    <br/>
+
+    <p></p>
+</div> 
+<div class="container" style="margin-left:400px">
+ 
+  <div class="card" style="width:300px; background-color:darksalmon">
+    <img class="card-img-top" src="~/Images/pic6.jpg" alt="Card image" style="width:100%">
+    <div class="card-body">
+      <h4 class="card-title" style="margin-left:100px">MENU</h4>
+      <p class="card-text"></p>
+      <a class="btn btn-success" style="margin-left:90px"
+                                   asp-area="Demos" asp-controller="Menus" asp-action="Index">ViewMenu</a>
+    </div>
+  </div>
+  </div>
+  <br>
+  <div style="background-color:antiquewhite">
+    <div class="spinner-grow text-muted"></div>
+<div class="spinner-grow text-primary"></div>
+<div class="spinner-grow text-success"></div>
+<div class="spinner-grow text-info"></div>
+<div class="spinner-grow text-warning"></div>
+<div class="spinner-grow text-danger"></div>
+<div class="spinner-grow text-secondary"></div>
+<div class="spinner-grow text-dark"></div>
+<div class="spinner-grow text-light"></div>
+<div class="spinner-grow text-muted"></div>
+<div class="spinner-grow text-primary"></div>
+<div class="spinner-grow text-success"></div>
+<div class="spinner-grow text-info"></div>
+<div class="spinner-grow text-warning"></div>
+<div class="spinner-grow text-danger"></div>
+<div class="spinner-grow text-secondary"></div>
+<div class="spinner-grow text-dark"></div>
+<div class="spinner-grow text-light"></div>
+<div class="spinner-grow text-muted"></div>
+<div class="spinner-grow text-primary"></div>
+<div class="spinner-grow text-success"></div>
+<div class="spinner-grow text-info"></div>
+<div class="spinner-grow text-warning"></div>
+<div class="spinner-grow text-danger"></div>
+<div class="spinner-grow text-secondary"></div>
+<div class="spinner-grow text-dark"></div>
+<div class="spinner-grow text-light"></div>
+<div class="spinner-grow text-light"></div>
+<div class="spinner-grow text-muted"></div>
+<div class="spinner-grow text-primary"></div>
+
 </div>
+  <br>
+<div>
+    <h3>--------------------------------------------------------------------------------------------------</h3>
+</div>
+<div>
+    <table>
+        <tr>
+            <td>
+                <img src="~/Images/pic1.png" width="600px">
+            </td>
+            <td>
+                <img src="~/Images/pic22.jpg" width="600px">
+            </td>
+        </tr>
+    </table>
+</div>
+<div>
+    <h3>............... Welcome to the Club..........................</h3>
+</div>
+
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+  <!-- Indicators -->
+  <ul class="carousel-indicators" style="margin-left:200px">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+    <li data-target="#demo" data-slide-to="3"></li>
+    <li data-target="#demo" data-slide-to="4"></li>
+  </ul>
+
+  <!-- The slideshow -->
+  <div class="carousel-inner" style=" margin-left:200px">
+    <div class="carousel-item active">
+      <img src="~/Images/pic11.png" alt="North Indian" width="800px" height="300px">
+    </div>
+    <div class="carousel-item">
+      <img src="~/Images/pic15.jpg" alt="Ocean View" width="800px" height="300px">
+    </div>
+    <div class="carousel-item">
+      <img src="~/Images/pic4.jpg" alt="Fish" width="800px" height="300px">
+    </div>
+    <div class="carousel-item">
+      <img src="~/Images/pic16.jpg" alt="New York" width="800px" height="300px">
+    </div>
+    <div class="carousel-item">
+      <img src="~/Images/pic12.jpg" alt="Restaurant" width="800px" height="300px">
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon" style="background-color:black"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon" style="background-color:black"></span>
+  </a>
+
+</div>
+
+<footer tabindex="-1" id="SITE_FOOTER_WRAPPER">
+    <div id="SITE_FOOTER" class="_3Fgqs">
+        <div class="rmFV4"></div><div class="_319u9">
+            <div class="_3N4he"></div><div class="_1U65c">
+                <div data-mesh-id="SITE_FOOTERinlineContent" data-testid="inline-content" class="">
+                    <div data-mesh-id="SITE_FOOTERinlineContent-gridContainer" data-testid="mesh-container-content">
+                        <div id="comp-jxvz3tgj" class="_2Hij5 _3bcaz" data-testid="richTextElement">
+                            <h1 class="font_0" style="font-size:20px; line-height:normal; text-align:center;">
+                                <span style="font-size:20px;">
+                                    <span class="color_15">
+                                        <span style="font-family:wfont_081eab_2fb2be20f28f4e1087486811621e2f41,wf_2fb2be20f28f4e10874868116,orig_gothammedium;"><span style="letter-spacing:normal;">LOCATIONS</span></span></span></span></h1></div>
+                                        <div id="comp-jxvz731w" class="_2Hij5 _3bcaz" data-testid="richTextElement">
+                                            <h1 class="font_0" style="font-size:13px; line-height:normal; text-align:center;">
+                                                <span class="color_15">
+                                                    <span style="font-family:wfont_0ee50d_128bd103996d419b9177918168c8546c,wf_128bd103996d419b917791816,orig_gothambook;">
+                                                        <span style="letter-spacing:normal;">
+                                                            <a href="http://www.jacksbarlondon.co.uk" target="_blank" rel="noreferrer noopener">
+                                                                <span style="font-size:13px;">JACKS BAR</span></a></span></span></span></h1></div>
+                                                                <div id="comp-jxvz7r6t" class="_2Hij5 _3bcaz" data-testid="richTextElement">
+                                                                    <h1 class="font_0" style="font-size:13px; line-height:normal; text-align:center;">
+                                                                        <span class="color_15">
+                                                                            <span style="font-family:wfont_0ee50d_128bd103996d419b9177918168c8546c,wf_128bd103996d419b917791816,orig_gothambook;"><span style="letter-spacing:normal;"><a href="http://www.mcandsonslondon.com" target="_blank" rel="noreferrer noopener">
+                                                                                <span style="font-size:13px;">MC &amp; SONS</span></a></span></span></span></h1></div>
+                                                                                <div id="comp-jxvz593r" class="_2Hij5 _3bcaz" data-testid="richTextElement">
+                                                                                    <h1 class="font_0" style="font-size:13px; line-height:normal; text-align:center;">
+                                                                                        <span class="color_15"><span style="font-family:wfont_0ee50d_128bd103996d419b9177918168c8546c,wf_128bd103996d419b917791816,orig_gothambook;"><a href="http://www.theringbarlondon.co.uk" target="_blank" rel="noreferrer noopener">
+                                                                                            <span style="letter-spacing:normal;"><span style="font-size:13px;">THE RING</span></span></a></span></span></h1></div><div id="comp-jxvz60of" class="_2Hij5 _3bcaz" data-testid="richTextElement">
+                                                                                                <h1 class="font_0" style="font-size:13px; line-height:normal; text-align:center;"><span class="color_15"><span style="font-family:wfont_0ee50d_128bd103996d419b9177918168c8546c,wf_128bd103996d419b917791816,orig_gothambook;"><span style="letter-spacing:normal;"><a href="http://www.thekingsarmslondon.co.uk" target="_blank" rel="noreferrer noopener"><span style="font-size:13px;">THE KINGS ARMS</span></a></span></span></span></h1></div><div id="comp-jxykb7ud" class="_2Hij5 _3bcaz" data-testid="richTextElement"><h1 class="font_0" style="font-size:13px; line-height:normal; text-align:center;"><span class="color_15"><span style="font-family:wfont_0ee50d_128bd103996d419b9177918168c8546c,wf_128bd103996d419b917791816,orig_gothambook;"><span style="letter-spacing:normal;"><a href="http://www.johnnyrice.co.uk" target="_blank" rel="noreferrer noopener"><span style="font-size:13px;">JOHNNY RICE THAI FOOD</span></a></span></span></span></h1></div><div id="comp-l5ky6ysq" class="_2Hij5 _3bcaz" data-testid="richTextElement"><h1 class="font_0" style="font-size:20px; line-height:normal; text-align:center;"><span style="font-size:20px;"><span class="color_15"><span style="font-family:wfont_081eab_2fb2be20f28f4e1087486811621e2f41,wf_2fb2be20f28f4e10874868116,orig_gothammedium;"><span style="letter-spacing:normal;">OPENING TIMES</span></span></span></span></h1></div><div id="comp-l5mcivpm" class="_2Hij5 _3bcaz" data-testid="richTextElement"><h1 class="font_0" style="font-size:20px; line-height:normal; text-align:center;"><span style="font-size:20px;"><span class="color_15"><span style="font-family:wfont_081eab_2fb2be20f28f4e1087486811621e2f41,wf_2fb2be20f28f4e10874868116,orig_gothammedium;"><span style="letter-spacing:normal;">CONTACT</span></span></span></span></h1></div><div id="comp-l5mccxq1" class="_2Hij5 _3bcaz" data-testid="richTextElement"><h1 class="font_0" style="font-size:13px; line-height:1.2em;"><span class="color_15"><span style="font-family:wfont_0ee50d_128bd103996d419b9177918168c8546c,wf_128bd103996d419b917791816,orig_gothambook;"><span style="letter-spacing:normal;"><a href="http://www.jacksbarlondon.co.uk" target="_blank" rel="noreferrer noopener"><span style="font-size:13px;">MON/TUE: 11:30AM - 11PM<br>
+WED/THU: 11:30AM - 11:30PM<br>
+FRI/SAT: 11:30AM - 12AM&nbsp;<br>
+SUN: CLOSED</span></a></span></span></span></h1></div><div id="comp-l5mcj9cw" class="_2Hij5 _3bcaz" data-testid="richTextElement"><h1 class="font_0" style="font-size:13px; line-height:1.3em;"><span class="color_15"><span style="font-family:wfont_0ee50d_128bd103996d419b9177918168c8546c,wf_128bd103996d419b917791816,orig_gothambook;"><span style="letter-spacing:normal;"><a href="http://www.jacksbarlondon.co.uk" target="_blank" rel="noreferrer noopener"><span style="font-size:13px;">96 Dev Kali Road, Ayodhaya U.P. India<br>
+TEL:&nbsp;</span></a><a href="https://www.google.com/search?q=jacks+bar&amp;oq=jacks+bar&amp;aqs=chrome.0.69i59l2j46i39i175i199j0i10i131i433i512j46i175i199i512j69i60l3.1353j0j9&amp;sourceid=chrome&amp;ie=UTF-8#" target="_blank" rel="noreferrer noopener">020 7928 0678<br>
+EMAIL: ADITYADUBEY@WINDMILLTAVERNS.COM</a></span></span></span><br>
+<br>
+<br>
+<br>
+&nbsp;</h1></div><div id="comp-jxyjy9gw" class="_2Hij5 _3bcaz" data-testid="richTextElement"><h1 class="font_0" style="font-size:13px; line-height:normal; text-align:center;"><span class="color_15"><span style="font-family:wfont_0ee50d_128bd103996d419b9177918168c8546c,wf_128bd103996d419b917791816,orig_gothambook;"><span style="letter-spacing:normal;"><a href="http://www.windmilltaverns.com" target="_blank" rel="noreferrer noopener"><span style="font-size:13px;">WORK WITH US</span></a></span></span></span></h1></div></div></div></div></div></div></footer>
