--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -5,6 +5,7 @@ a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  
 }
 
 /* Provide sufficient contrast against white background */
@@ -39,7 +40,7 @@ html {
   border-top: 1px solid #e5e5e5;
 }
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 2px solid #e5e5e5;
 }
 
 .box-shadow {
@@ -59,8 +60,11 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    background-image: url('../Images/pic21.jpg');
+    color:black;
+    font-weight: bolder;
 }
 .footer {
   position: absolute;
@@ -68,4 +72,7 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+  background-color:cadetblue;
+  color:black;
+  font-weight:bold;
 }
